sysyruntimelibrary-master/functional_test/23_if_test2.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/23_if_test2.sy:20:24: error: syntax error, unexpected R_PARENTHESIS
20|   return (ifElseElseIf()
  |                         ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/23_if_test2.sy:0:0: error: not find main function
